tests/paczka2/big_fuzzy/27661839.err
Error in line 3: S199 A655 95,9
Error in line 2: HbLRJAKPcEB A345 76,3
Error in line 8: S199 A345 19,33
Error in line 4: S199 A754 17,8
Error in line 17: FsZh A754 48,6
Error in line 15: S199 A345 48,6
Error in line 16: bbOIalP A345 2,3
Error in line 29: QPi A655 1,4
Error in line 52: bbOIalP A754 61,4
Error in line 59: S199 A655 35,8
Error in line 69: HbLRJAKPcEB A754 54,28
Error in line 68: nqnSFQYF A655 40,8
Error in line 67: S199 A754 26,1
Error in line 89: nqnSFQYF A754 37,9
Error in line 93: 6L2m5ucc A754 59,4
Error in line 94: 6L2m5ucc S199 32,7
Error in line 81: HbLRJAKPcEB A754 234,0
Error in line 101: HbLRJAKPcEB A345 22,1
Error in line 85: QPi A655 31,8
Error in line 105: HbLRJAKPcEB A655 91,6
Error in line 102: S199 S199 35,6
Error in line 114: S199 A754 37,2
Error in line 118: QPi A754 19,6
Error in line 116: nqnSFQYF S199 36,6
Error in line 149: HbLRJAKPcEB A345 58,0
Error in line 153: HbLRJAKPcEB A754 75,0
Error in line 156: HbLRJAKPcEB A655 32,5
Error in line 151: S199 S199 86,0
Error in line 171: S199 A345 62,9
Error in line 178: S199 A655 27,9
Error in line 182: nqnSFQYF A655 4,8
Error in line 179: S199 S199 24,4
Error in line 183: nqnSFQYF A754 82,7
Error in line 188: HbLRJAKPcEB A345 3,5
Error in line 191: HbLRJAKPcEB S199 50,1
Error in line 169: QPi A345 117,5
Error in line 206: QPi S199 1,6
Error in line 209: QPi A655 19,4
Error in line 214: QPi S199 89,8
Error in line 216: QPi A345 20,4
Error in line 199: FsZh S199 101,1
Error in line 213: 6L2m5ucc A345 13,9
Error in line 225: nqnSFQYF A655 82,5
Error in line 221: 6L2m5ucc A754 716,3
Error in line 226: nqnSFQYF S199 62,4
Error in line 231: QPi A345 ,1
Error in line 227: 6L2m5ucc A345 78,1
Error in line 238: S199 S199 51,6
Error in line 239: S199 A754 8,0
Error in line 234: QPi A345 13,4
